--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                     name: "RABANNE PHANTOM EAU DE TOILETTE", 
                     price: 110, 
                     size: "20 ml", 
-                    img: "rabannephantomedt.jpg.",  
+                    img: "rabannephantomedt.jpg",  
                     link: "rabannephantomedt.html",
                     badge: "Promocja",
                     seasons: ["wiosna", "lato"]
