--- a/versaceeros.html
+++ b/versaceeros.html
@@ -241,12 +241,25 @@
         }
         
         .details-title {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             color: #2c3e50;
             margin-bottom: 1.5rem;
             padding-bottom: 0.5rem;
             border-bottom: 2px solid #eee;
+            text-align: center;
+            position: relative;
         }
+
+        .details-title:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 3px;
+    background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+}
         
         .details-table {
             width: 100%;
@@ -325,18 +338,27 @@
             .product-image-container {
                 margin-bottom: 2rem;
             }
+            .features-grid {
+                grid-template-columns: 1fr;
+            }
+            .details-title {
+                font-size: 1.5rem;
+            }
         }
-        /* Nowe sekcje */
         .product-features {
             margin-top: 3rem;
             opacity: 0;
+            padding: 2rem;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.05);
             animation: fadeIn 0.6s ease-out 3.0s forwards;
         }
 
         .features-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 2rem;
             margin-top: 1.5rem;
         }
 
@@ -346,6 +368,7 @@
             padding: 1.5rem;
             text-align: center;
             transition: all 0.3s;
+            border: 1px solid #e0e0e0;
         }
 
         .feature-card:hover {
@@ -354,20 +377,22 @@
         }
 
         .feature-icon {
-            font-size: 2rem;
+            font-size: 2.5rem;
             color: #6e48aa;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
 
         .feature-title {
-            font-weight: bold;
-            margin-bottom: 0.5rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
             color: #2c3e50;
+            font-size: 1.3rem;
         }
 
         .feature-desc {
             color: #3b4146;
-            font-size: 0.9rem;
+            font-size: 1rem;
+            line-height: 1.6;
         }
         .back-button {
             display: inline-block;
