--- a/versaceeros.html
+++ b/versaceeros.html
@@ -326,6 +326,12 @@
             to { opacity: 0; }
         }
         
+        @media (max-width: 1024px){
+            .features-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
         @media (max-width: 768px) {
             .product-header {
                 flex-direction: column;
@@ -345,7 +351,8 @@
                 font-size: 1.5rem;
             }
             .feature-card {
-                padding: 1.5rem;
+                width: 100%;
+                max-width: 100%;
             }
         }
         .product-features {
@@ -357,27 +364,33 @@
             box-shadow: 0 0 15px rgba(0,0,0,0.05);
             animation: fadeIn 0.6s ease-out 3.0s forwards;
             width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .features-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-top: 1.5rem;
+            grid-template-columns: repeat(3, 1fr);
+            width: 100%;
+            justify-items: center;
         }
 
         .feature-card {
             background: #f8f9fa;
             border-radius: 10px;
-            padding: 2rem;
-            text-align: center;
             transition: all 0.3s ease;
             border: 1px solid #e0e0e0;
             height: 100%;
+            width: 90%;
+            min-height: 250px;
+            max-width: 350px;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            justify-content: center;
+            text-align: center;
+            padding: 2rem 1rem;
         }
 
         .feature-card:hover {
@@ -412,6 +425,8 @@
             font-size: 1rem;
             line-height: 1.6;
             margin: 0;
+            width: 100%;
+            padding: 0 10px;
         }
         .back-button {
             display: inline-block;
