--- a/versaceeros.html
+++ b/versaceeros.html
@@ -374,12 +374,14 @@
             grid-template-columns: repeat(3, 1fr);
             width: 100%;
             justify-items: center;
+            gap: 1.5rem;
+            margin-top: 1.5rem;            
         }
 
         .feature-card {
             background: #f8f9fa;
-            border-radius: 10px;
-            transition: all 0.3s ease;
+            border-radius: 8px;
+            transition: all 0.3s;
             border: 1px solid #e0e0e0;
             height: 100%;
             width: 90%;
@@ -390,7 +392,7 @@
             justify-content: space-between;
             align-items: center;
             text-align: center;
-            padding: 2rem 1rem;
+            padding: 1.5rem;
         }
 
         .feature-card:hover {
@@ -403,7 +405,7 @@
         .feature-icon {
             font-size: 2.5rem;
             color: #6e48aa;
-            margin-bottom: 1.5rem;
+            margin-bottom: 0.5rem;
             width: 60px;
             height: 60px;
             display: flex;
@@ -411,6 +413,7 @@
             justify-content: center;
             background: rgba(42, 82, 152, 0.1);
             border-radius: 50%;
+            font-weight: bold;
         }
 
         .feature-title {
@@ -422,7 +425,7 @@
 
         .feature-desc {
             color: #3b4146;
-            font-size: 1rem;
+            font-size: 0.9rem;
             line-height: 1.6;
             margin: 0;
             width: 100%;
