--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@
         }
         
         .cart-item-img {
-            width: 70px;
-            height: 70px;
+            width: 10%;
+            height: 10%;
             object-fit: cover;
             border-radius: 4px;
             border: 1px solid #ddd;
