--- a/versaceeros.html
+++ b/versaceeros.html
@@ -713,7 +713,7 @@
             const activeButton = document.querySelector('.size-btn.active');
             const price = activeButton.getAttribute('data-price');
             const size = activeButton.getAttribute('data-size');
-            const productName = 'VERSACE EROS EDP';
+            const productName = 'VERSACE EROS ENERGY EDP';
             
             // Pobierz aktualny koszyk z localStorage
             let cart = JSON.parse(localStorage.getItem('cart')) || [];
@@ -732,7 +732,7 @@
                     price: parseFloat(price),
                     size: size,
                     quantity: 1,
-                    img: 'versaceeros.jpg' // Ścieżka do obrazka
+                    img: 'versaceerosenergy.jpg' // Ścieżka do obrazka
                 });
             }
             
