--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="p.jpg">
     <title>Perfume Luxe</title>
+    <meta name="description" content="Kup oryginalne perfumy na odlewki. Tanie perfumy w małych pojemnościach – idealne na każdą okazję.">
+    <meta name="keywords" content="perfumy, odlewki, oryginalne perfumy, tanie perfumy, perfumy na próbę, odlewki perfum, perfumy odlewki, perfume luxe">
     <style>
         * {
             box-sizing: border-box;
